fix: display message status on mobile (#577)
### Description Of Changes

* display message status on mobile

[UIKIT-3907](https://sendbird.atlassian.net/browse/UIKIT-3907)

--- a/src/ui/MessageContent/index.scss
+++ b/src/ui/MessageContent/index.scss
@@ -121,6 +121,15 @@
         }
       }
     }
+    @include mobile() {
+      .sendbird-message-content__middle {
+        .sendbird-message-content__middle__body-container {
+          .sendbird-message-content__middle__body-container__created-at {
+            display: inline-flex;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -204,6 +213,15 @@
       .sendbird-message-content__middle__body-container {
         .sendbird-message-content__middle__body-container__created-at {
           display: none;
+        }
+      }
+    }
+    @include mobile {
+      .sendbird-message-content__middle {
+        .sendbird-message-content__middle__body-container {
+          .sendbird-message-content__middle__body-container__created-at {
+            display: inline-flex;
+          }
         }
       }
     }
